hphp/hack/test/typecheck/goto/goto_invalid_label.php
<?hh

function test(): void {
  goto 1 + 1;
}
